[gd_scene load_steps=6 format=3 uid="uid://w7phl8uip11p"]

[ext_resource type="Script" path="res://player.gd" id="1_dgu7l"]
[ext_resource type="Texture2D" uid="uid://dx73dm2hmo56" path="res://assets/pixilart-sprite (3).png" id="3_iglaq"]
[ext_resource type="Texture2D" uid="uid://cth1vtq7kr7ir" path="res://assets/pixilart-drawing (4).png" id="3_x2bgf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xtys6"]
size = Vector2(62, 11.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jktsm"]
size = Vector2(65, 79.5)

[node name="Player" type="CharacterBody2D"]
position = Vector2(-7, -7)
script = ExtResource("1_dgu7l")

[node name="Hitbox" type="CollisionShape2D" parent="."]
light_mask = 0
visibility_layer = 0
position = Vector2(7, 53.75)
shape = SubResource("RectangleShape2D_xtys6")

[node name="Icon" type="Sprite2D" parent="."]
visible = false
position = Vector2(7.00003, 34)
scale = Vector2(3.0175, 3.0925)
texture = ExtResource("3_x2bgf")

[node name="shootingTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="Pixilart-sprite(3)" type="Sprite2D" parent="."]
position = Vector2(2.00002, 30)
scale = Vector2(2.55928, 2.355)
texture = ExtResource("3_iglaq")
region_enabled = true
region_rect = Rect2(0, 0, 97, 100)

[node name="Gun" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(6, -13)
scale = Vector2(2.55928, 2.355)
texture = ExtResource("3_iglaq")
region_enabled = true
region_rect = Rect2(138.137, 5.65042, 23.9669, 41.0522)

[node name="ShootingPoint" type="Marker2D" parent="Gun"]
unique_name_in_owner = true
position = Vector2(0.78147, -16.1359)
scale = Vector2(0.390735, 0.424628)

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(6.5, 18.75)
shape = SubResource("RectangleShape2D_jktsm")

[connection signal="timeout" from="shootingTimer" to="." method="_on_shooting_timer_timeout"]
